ajouts divers, classe article et image de backgroudn

--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ad3b2267ce.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Manuel Folliot, développeur web et web mobile</title>
 </head>
 <body>
-    <header>
+    <div class="container">
+        <header>
+            <h1>Manuel Folliot</h1>
+            <nav>
+                <ul>
+                    <li>Présentation <i class="fa-solid fa-user"></i></li>
+                    <li>Parcours <i class="fa-solid fa-book"></i></li>
+                    <li>Compétences <i class="fa-solid fa-computer"></i></li>
+                    <li>Réalisations <i class="fa-solid fa-hammer"></i></li>
+                    <li>Contact <i class="fa-solid fa-phone"></i></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="border-image">            
+            <img src="../img/profil.png" alt="" id="profile_pic">
+        </div>
+        <main>
+            <div class="section">
+                <h2>Présentation</h2>
+                <article class="article">
+                    <p>Qui suis-je ?</p>
+                </article>
+            </div>
+            <div class="section">
+                <h2>Parcours</h2>
+                <article class="article">
+                    <p>D'où je viens</p>
+                </article>
+            </div>
+            <div class="section">
+                <h2>Compétences</h2>
+                <article class="article">
+                    <p>Ce que je sais faire</p>
+                </article>
+            </div>
+            <div class="section">
+                <h2>Contact</h2>
+                <article class="article">
+                    <p>Lieu de résidence : Rennes (35000)</p>
+                    <p>Mon profil <a href="https://github.com/ManuelFolliot">GitHub</a></p>
+                    <p>Mon profil <a href="https://www.linkedin.com/in/manuelfolliot/">LinkedIn</a></p>
+                </article>
+            </div>
+        </main>
+    </div>
+    <footer>
 
-    </header>
-    <main></main>
-    <footer></footer>
+    </footer>
 </body>
 </html>
