--- a/html/index.html
+++ b/html/index.html
@@ -28,19 +28,81 @@
             <div class="section">
                 <h2>Présentation</h2>
                 <article class="article">
-                    <p>Qui suis-je ?</p>
+                    <p>Ancien professeur d'histoire-géographie en reconversion professionnelle, je me suis découvert une passion pour le développement web, ses possibilités et ses défis.</p>
+                    <p>À la recherche d'une alternance afin de poursuivre mon intégration dans ce milieu.</p>
                 </article>
             </div>
             <div class="section">
-                <h2>Parcours</h2>
+                <h2>Formation</h2>
                 <article class="article">
-                    <p>D'où je viens</p>
+                    <div class="article-formation-ecole">
+                        <h3>2023-2024 : O'Clock</h3>
+                        <p>Formation développeur web, socle PHP, spécialisation Symfony</p>
+                    </div>
+                    <div class="article-formation-ecole">
+                        <h3>2022-2023 : 3WAcademy</h3>
+                        <p>Bootcamp développeur web en HTML-CSS, PHP, JavaScript, SQL, React.</p>
+                    </div>
+                    <div class="article-formation-ecole">
+                        <h3>2019 : Rennes 2</h3>
+                        <p>Réussite du concours CAPES-CAFEP d'histoire-géographie</p>
+                    </div>
+                    <div class="article-formation-ecole">
+                        <h3>2015-2017 : Rennes 2</h3>
+                        <p>Master recherche histoire-relations internationales (mention très bien)</p>
+                    </div>
+                    <div class="article-formation-ecole">
+                        <h3>2012-2015 : Université Catholique de l'Ouest</h3>
+                        <p>Licence d'histoire</p>
+                    </div>
                 </article>
             </div>
             <div class="section">
                 <h2>Compétences</h2>
+                <article class="article skills">
+                    <div class="skills-details">
+                        <h3>Langues</h3>
+                        <ul>
+                            <li>Anglais</li>
+                            <li>Espagnol</li>
+                            <li>Persan</li>
+                        </ul>
+                    </div>
+                    <div class="skills-details">
+                        <h3>Programmation</h3>
+                        <ul>
+                            <li>HTML/CSS</li>
+                            <li>PHP 5</li>
+                            <li>JavaScript</li>
+                            <li>SQL</li>
+                            <li>React</li>
+                        </ul>
+                    </div>
+                    <div class="skills-details">
+                        <h3>Softskills</h3>
+                        <ul>
+                            <li>Rigueur</li>
+                            <li>Empathie</li>
+                            <li>Patience</li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+            <div class="section">
+                <h2>Expériences professionnelles</h2>
                 <article class="article">
-                    <p>Ce que je sais faire</p>
+                    <div>
+                        <h3>2021-2024 : Complétude</h3>
+                        <p>Cours particuliers (anglais, histoire-géographie, HGGSP, aide aux devoirs niveau collège)</p>
+                    </div>
+                    <div>
+                        <h3>2019-2021 : Lycée la Providence (Saint-Malo), Lycée les Cordeliers (Dinan)</h3>
+                        <p>Professeur d'histoire-géographie</p>
+                    </div>
+                    <div>
+                        <h3>2013-2018 : Groupama Loire-Bretange</h3>
+                        <p>Divers CDD saisonniers (service souscriptions, moyens généraux, assistance informatique)</p>
+                    </div>
                 </article>
             </div>
             <div class="section">
