--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,11 @@
             <h1>Manuel Folliot</h1>
             <nav>
                 <ul>
-                    <li>Présentation <i class="fa-solid fa-user"></i></li>
-                    <li>Parcours <i class="fa-solid fa-book"></i></li>
-                    <li>Compétences <i class="fa-solid fa-computer"></i></li>
+                    <li><a href="#presentation">Présentation<i class="fa-solid fa-user"></i></a></li>
+                    <li><a href="#formation">Formation <i class="fa-solid fa-book"></i></a></li>
+                    <li><a href="#skills">Compétences <i class="fa-solid fa-computer"></i></a></li>
                     <li>Réalisations <i class="fa-solid fa-hammer"></i></li>
-                    <li>Contact <i class="fa-solid fa-phone"></i></li>
+                    <li><a href="#contact">Contact <i class="fa-solid fa-phone"></i></a></li>
                 </ul>
             </nav>
         </header>
@@ -25,14 +25,14 @@
             <img src="../img/profil.png" alt="" id="profile_pic">
         </div>
         <main>
-            <div class="section">
+            <div class="section" id="#presentation">
                 <h2>Présentation</h2>
                 <article class="article">
                     <p>Ancien professeur d'histoire-géographie en reconversion professionnelle, je me suis découvert une passion pour le développement web, ses possibilités et ses défis.</p>
                     <p>À la recherche d'une alternance afin de poursuivre mon intégration dans ce milieu.</p>
                 </article>
             </div>
-            <div class="section">
+            <div class="section" id="formation">
                 <h2>Formation</h2>
                 <article class="article">
                     <div class="article-formation-ecole">
@@ -57,7 +57,7 @@
                     </div>
                 </article>
             </div>
-            <div class="section">
+            <div class="section" id="skills">
                 <h2>Compétences</h2>
                 <article class="article skills">
                     <div class="skills-details">
@@ -88,7 +88,7 @@
                     </div>
                 </article>
             </div>
-            <div class="section">
+            <div class="section" id="professional-experiences">
                 <h2>Expériences professionnelles</h2>
                 <article class="article">
                     <div>
@@ -105,7 +105,7 @@
                     </div>
                 </article>
             </div>
-            <div class="section">
+            <div class="section" id="contact">
                 <h2>Contact</h2>
                 <article class="article">
                     <p>Lieu de résidence : Rennes (35000)</p>
